libs/@local/hashql/hir/tests/ui/lower/specialization/math.jsonc
//@ run: fail
//@ description: Math operations are not implemented yet
["+", { "#literal": 1 }, { "#literal": 2 }]
//~^ ERROR intrinsic `::core::math::add` not supported yet
